styles/notion.css
/* ... */
.notion {
  font-size: 16px;
  line-height: 1.5;
  color: var(--fg-color);
  caret-color: var(--fg-color);
  font-family: inherit !important;
}

.notion > * {
  padding: 3px 0;
}

.notion * {
  margin-block-start: 0;
  margin-block-end: 0;
}

.notion *::selection {
  background: var(--select-color-1);
}

.notion *,
.notion *:focus {
  outline: 0;
}

.notion-page-content {
  width: 100%;
  display: flex;
  flex-direction: column;
}

@media (min-width: 1300px) and (min-height: 300px) {
  .notion-page-content-has-aside {
    display: flex;
    flex-direction: row;
    width: calc((100vw + var(--notion-max-width)) / 2);
  }

  .notion-page-content-has-aside .notion-aside {
    display: flex;
  }

  .notion-page-content-has-aside .notion-page-content-inner {
    width: var(--notion-max-width);
    max-width: var(--notion-max-width);
  }
}

.notion-page-content-inner {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.notion-aside {
  position: sticky;
  top: calc(88px);
  align-self: flex-start;
  flex: 1;
  flex-direction: column;
  align-items: center;
}

.notion-aside-table-of-contents {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-height: calc(100vh - 148px - 16px);
  overflow: hidden auto;
  min-width: 222px;
  overflow: auto;
}

.notion-aside-table-of-contents-header {
  text-transform: uppercase;
  font-weight: 500;
  font-size: 1.1em;
  word-break: break-word;
}

.notion-aside-table-of-contents .notion-table-of-contents-item {
  line-height: 1;
}

.notion-aside-table-of-contents
  .notion-table-of-contents-item-indent-level-0:first-of-type {
  margin-top: 0;
}

.notion-aside-table-of-contents .notion-table-of-contents-item-indent-level-0 {
  margin-top: 0.25em;
}

.notion-aside-table-of-contents .notion-table-of-contents-item-indent-level-1 {
  font-size: 13px;
}

.notion-aside-table-of-contents .notion-table-of-contents-item-indent-level-2 {
  font-size: 12px;
}

.notion-aside-table-of-contents .notion-table-of-contents-item-body {
  border: 0 none;
}

.notion-table-of-contents-active-item {
  color: var(--select-color-2) !important;
}

.notion-app {
  position: relative;
  background: var(--bg-color);
  min-height: 100vh;
}

.notion-viewport {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -10;
  pointer-events: none;
}

.medium-zoom-overlay {
  z-index: 300;
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
}

.medium-zoom-image {
  border-radius: 0;
}

.medium-zoom-image--opened {
  z-index: 301;
  /* width: auto !important; */
}

@media (max-width: 768px) {
  .medium-zoom-image--opened {
    object-fit: fill !important;
    height: auto !important;
  }
}

@media (min-width: 768px) {
  .medium-zoom-image--opened {
    object-fit: scale-down !important;
  }
}

.notion-frame {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.notion-page-scroller {
  position: relative;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  align-items: center;
  min-height: calc(100vh - var(--notion-header-height));
}

.notion-red,
.notion-red_co {
  color: var(--notion-red);
}
.notion-pink,
.notion-pink_co {
  color: var(--notion-pink);
}
.notion-blue,
.notion-blue_co {
  color: var(--notion-blue);
}
.notion-purple,
.notion-purple_co {
  color: var(--notion-purple);
}
.notion-teal,
.notion-teal_co {
  color: var(--notion-teal);
}
.notion-yellow,
.notion-yellow_co {
  color: var(--notion-yellow);
}
.notion-orange,
.notion-orange_co {
  color: var(--notion-orange);
}
.notion-brown,
.notion-brown_co {
  color: var(--notion-brown);
}
.notion-gray,
.notion-gray_co {
  color: var(--notion-gray);
}
.notion-red_background {
  background-color: var(--notion-red_background);
}
.notion-pink_background {
  background-color: var(--notion-pink_background);
}
.notion-blue_background {
  background-color: var(--notion-blue_background);
}
.notion-purple_background {
  background-color: var(--notion-purple_background);
}
.notion-teal_background {
  background-color: var(--notion-teal_background);
}
.notion-yellow_background {
  background-color: var(--notion-yellow_background);
}
.notion-orange_background {
  background-color: var(--notion-orange_background);
}
.notion-brown_background {
  background-color: var(--notion-brown_background);
}
.notion-gray_background {
  background-color: var(--notion-gray_background);
}
.notion-green_background {
  background-color: var(--notion-green_background);
}
.notion-default_background {
  background-color: var(--notion-default_background);
}

.notion-red_background_co {
  background-color: var(--notion-red_background_co);
}
.notion-pink_background_co {
  background-color: var(--notion-pink_background_co);
}
.notion-blue_background_co {
  background-color: var(--notion-blue_background_co);
}
.notion-purple_background_co {
  background-color: var(--notion-purple_background_co);
}
.notion-teal_background_co {
  background-color: var(--notion-teal_background_co);
}
.notion-yellow_background_co {
  background-color: var(--notion-yellow_background_co);
}
.notion-orange_background_co {
  background-color: var(--notion-orange_background_co);
}
.notion-brown_background_co {
  background-color: var(--notion-brown_background_co);
}
.notion-gray_background_co {
  background-color: var(--notion-gray_background_co);
}
.notion-green_background_co {
  background-color: var(--notion-green_background_co);
}
.notion-default_background_co {
  background-color: var(--notion-default_background_co);
}

.notion-item-blue {
  background-color: var(--notion-item-blue);
}
.notion-item-orange {
  background-color: var(--notion-item-orange);
}
.notion-item-green {
  background-color: var(--notion-item-green);
}
.notion-item-pink {
  background-color: var(--notion-item-pink);
}
.notion-item-brown {
  background-color: var(--notion-item-brown);
}
.notion-item-red {
  background-color: var(--notion-item-red);
}
/* ... */

